--- a/frontend/style.css
+++ b/frontend/style.css
@@ -34,17 +34,26 @@
   /* css reset */
 
 section {
-    height: 100vh;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    align-content: center;
+    flex-flow: column wrap;
+    flex-wrap: wrap;
+    height: 100vh;
+    /*width: 100%;*/
     row-gap: 100px;
     font-family: 'Courier New', Courier, monospace;
     margin-left: 100px;
 }
 
+
+
+
+
+  
+
+
 .charactername {
+    
     margin-top: 40px;
 }
 
@@ -58,21 +67,36 @@ section {
     border-radius: 5px;
     width: 450px;
     height: 90px;
-    font-size: 30px;
+    font-size: 20px;
 }
+
+
 
 .charactername form input text {
     font-size: 30px;
 }
 
 .classes label {
+    
     font-size: 30px;
 }
 
 .races label {
+    
     font-size: 30px;
 }
 
 .gender label {
-    font-size: 30px;
+  
+  font-size: 30px;
+}
+
+.charactersheet {
+    
+    background-color: blanchedalmond;
+    width: 400px;
+    height: 500px;
+    border-color: chartreuse;
+    margin-top: 40px;
+    margin-right: 100px;
 }
