--- a/frontend/style.css
+++ b/frontend/style.css
@@ -39,7 +39,7 @@ section {
     flex-flow: column wrap;
     flex-wrap: wrap;
     height: 100vh;
-    /*width: 100%;*/
+    width: 100%;
     row-gap: 100px;
     font-family: 'Courier New', Courier, monospace;
     margin-left: 100px;
@@ -68,13 +68,20 @@ section {
     width: 450px;
     height: 90px;
     font-size: 20px;
-}
+  }
+  
+  
+  section .charactername form #values {
+    font-size: 30px;
+    font-weight: bold;
 
-
-
+  }
+  
 .charactername form input text {
     font-size: 30px;
 }
+
+
 
 .classes label {
     
