--- a/frontend/style.css
+++ b/frontend/style.css
@@ -39,7 +39,7 @@ section {
     flex-flow: column wrap;
     flex-wrap: wrap;
     height: 100vh;
-    width: 100%;
+    /*width: 100%;*/
     row-gap: 100px;
     font-family: 'Courier New', Courier, monospace;
     margin-left: 100px;
@@ -71,10 +71,13 @@ section {
   }
   
   
-  section .charactername form #values {
+  .charactername form #values {
+    position: absolute;
     font-size: 30px;
     font-weight: bold;
-
+    top: 70px;
+    left: 800px;
+    z-index: 99;
   }
   
 .charactername form input text {
@@ -99,7 +102,7 @@ section {
 }
 
 .charactersheet {
-    
+    position: relative;
     background-color: blanchedalmond;
     width: 400px;
     height: 500px;
