--- a/frontend/style.css
+++ b/frontend/style.css
@@ -68,7 +68,6 @@ section {
   
   
 .charactername form #values {
-  position: absolute;
   font-size: 30px;
   font-weight: bold;
   color: salmon;
@@ -108,10 +107,13 @@ input[type=text], select {
 }
 
 .charactersheet {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
   background-color: salmon;
-  width: 450px;
-  height: 650px;
+  width: 500px;
+  height: 740px;
   border-radius: 5px;
   margin-top: 40px;
   /*margin-right: 100px;*/
@@ -122,9 +124,9 @@ h2 {
 }
 
 p {
-  margin-left: 150px;
+  margin-left: 130px;
   padding: 10px;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 600;
 }
 
@@ -132,6 +134,6 @@ img {
   
   width: 150px;
   height: 150px;
-  margin-left: 150px;
+  margin-left: 175px;
 }
 
